# java-character

./: .ghci  JavaLetter.hs  java-character.cabal
src/: JavaCharacter.scala
src/Language/Java/: Character.hs
src/Language/Java/Character/: IsDefined.hs  IsDigit.hs  IsIdentifierIgnorable.hs  IsIsoControl.hs  IsJavaIdentifierPart.hs  IsJavaIdentifierStart.hs  IsLetter.hs  IsLetterOrDigit.hs  IsLowerCase.hs  IsMirrored.hs  IsSpaceChar.hs  IsSupplementaryCodePoint.hs  IsTitleCase.hs  IsUnicodeIdentifierPart.hs  IsUnicodeIdentifierStart.hs  IsUpperCase.hs  IsValidCodePoint.hs  IsWhitespace.hs
